# badgemagic-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.sh
.cargo/: config.toml
hardware/: pinout.md
src/: main.c  main.rs  matrix.c  matrix.h  matrix.rs
tools/: convert.py
